[package]
name = "bevy_local_commands"
version = "0.2.3"
edition = "2021"
description = "Simple local shell commands for the Bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edouardpoitras/bevy_local_commands"

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
  "multi-threaded",
] }

[lints.clippy]
# Bevy queries are often complex types
type_complexity = "allow"
